src/server/actix_server/snapshots/viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_id_exact_no_hpo_terms.snap
---
source: src/server/actix_server/hpo_genes.rs
expression: "&run_query(\"/hpo/genes?gene_id=2348\").await?"
---
- gene_ncbi_id: 2348
  gene_symbol: FOLR1

