src/server/actix_server/snapshots/viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_exact_no_hpo_terms.snap
---
source: src/server/actix_server/hpo_genes.rs
expression: "&run_query(\"/hpo/genes?gene_symbol=TGDS\").await?"
---
- gene_ncbi_id: 23483
  gene_symbol: TGDS

