src/server/actix_server/snapshots/viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_prefix_no_hpo_terms.snap
---
source: src/server/actix_server/hpo_genes.rs
expression: "&run_query(\"/hpo/genes?gene_symbol=TGD&match=prefix\").await?"
---
version:
  hpo: 2023-04-05
  viguno: 0.1.0
query:
  gene_id: ~
  gene_symbol: TGD
  match_: prefix
  max_results: 100
  hpo_terms: false
result:
  - gene_ncbi_id: 23483
    gene_symbol: TGDS

