src/server/actix_server/snapshots/viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_prefix_with_hpo_terms.snap
---
source: src/server/actix_server/hpo_genes.rs
expression: "&run_query(\"/hpo/genes?gene_symbol=TGD&match=prefix&hpo_terms=true\").await?"
---
- gene_ncbi_id: 23483
  gene_symbol: TGDS
  hpo_terms:
    - term_id: "HP:0000007"
      name: Autosomal recessive inheritance
    - term_id: "HP:0000023"
      name: Inguinal hernia
    - term_id: "HP:0000028"
      name: Cryptorchidism
    - term_id: "HP:0000160"
      name: Narrow mouth
    - term_id: "HP:0000162"
      name: Glossoptosis
    - term_id: "HP:0000175"
      name: Cleft palate
    - term_id: "HP:0000193"
      name: Bifid uvula
    - term_id: "HP:0000201"
      name: Pierre-Robin sequence
    - term_id: "HP:0000204"
      name: Cleft upper lip
    - term_id: "HP:0000218"
      name: High palate
    - term_id: "HP:0000272"
      name: Malar flattening
    - term_id: "HP:0000293"
      name: Full cheeks
    - term_id: "HP:0000316"
      name: Hypertelorism
    - term_id: "HP:0000347"
      name: Micrognathia
    - term_id: "HP:0000368"
      name: "Low-set, posteriorly rotated ears"
    - term_id: "HP:0000389"
      name: Chronic otitis media
    - term_id: "HP:0000460"
      name: Narrow nose
    - term_id: "HP:0000470"
      name: Short neck
    - term_id: "HP:0000476"
      name: Cystic hygroma
    - term_id: "HP:0000520"
      name: Proptosis
    - term_id: "HP:0000579"
      name: Nasolacrimal duct obstruction
    - term_id: "HP:0000582"
      name: Upslanted palpebral fissure
    - term_id: "HP:0000767"
      name: Pectus excavatum
    - term_id: "HP:0000768"
      name: Pectus carinatum
    - term_id: "HP:0000954"
      name: Single transverse palmar crease
    - term_id: "HP:0001181"
      name: Adducted thumb
    - term_id: "HP:0001250"
      name: Seizure
    - term_id: "HP:0001263"
      name: Global developmental delay
    - term_id: "HP:0001373"
      name: Joint dislocation
    - term_id: "HP:0001387"
      name: Joint stiffness
    - term_id: "HP:0001388"
      name: Joint laxity
    - term_id: "HP:0001508"
      name: Failure to thrive
    - term_id: "HP:0001511"
      name: Intrauterine growth retardation
    - term_id: "HP:0001537"
      name: Umbilical hernia
    - term_id: "HP:0001629"
      name: Ventricular septal defect
    - term_id: "HP:0001631"
      name: Atrial septal defect
    - term_id: "HP:0001651"
      name: Dextrocardia
    - term_id: "HP:0001680"
      name: Coarctation of aorta
    - term_id: "HP:0001762"
      name: Talipes equinovarus
    - term_id: "HP:0001831"
      name: Short toe
    - term_id: "HP:0002119"
      name: Ventriculomegaly
    - term_id: "HP:0002553"
      name: Highly arched eyebrow
    - term_id: "HP:0002623"
      name: Overriding aorta
    - term_id: "HP:0002650"
      name: Scoliosis
    - term_id: "HP:0002857"
      name: Genu valgum
    - term_id: "HP:0003097"
      name: Short femur
    - term_id: "HP:0003577"
      name: Congenital onset
    - term_id: "HP:0004209"
      name: Clinodactyly of the 5th finger
    - term_id: "HP:0004322"
      name: Short stature
    - term_id: "HP:0005692"
      name: Joint hyperflexibility
    - term_id: "HP:0005792"
      name: Short humerus
    - term_id: "HP:0005930"
      name: Abnormal epiphysis morphology
    - term_id: "HP:0008897"
      name: Postnatal growth retardation
    - term_id: "HP:0009464"
      name: Ulnar deviation of the 2nd finger
    - term_id: "HP:0009467"
      name: Radial deviation of the 2nd finger
    - term_id: "HP:0009933"
      name: Narrow naris
    - term_id: "HP:0010049"
      name: Short metacarpal
    - term_id: "HP:0010285"
      name: Oral synechia
    - term_id: "HP:0010508"
      name: Metatarsus valgus
    - term_id: "HP:0010763"
      name: Low insertion of columella
    - term_id: "HP:0030368"
      name: Hyperphalangy of the 2nd finger
    - term_id: "HP:0045074"
      name: Thin eyebrow
    - term_id: "HP:0100490"
      name: Camptodactyly of finger

